# grpc-vcpkg-boilerplate-example

./: CMakeLists.txt  README.md
protos/: CMakeLists.txt
src/: CMakeLists.txt
